--- a/index.html
+++ b/index.html
@@ -6,61 +6,10 @@
 <head>
   <title>LEM PulseAudio Test</title>
 	<link rel="stylesheet" href="css/ui-darkness/jquery-ui-1.8.17.custom.css" type="text/css" media="all" />
-	<script id="server-template" type="text/x-handlebars-template">
-<dl>
-	<dt>Server Name</dt><dd>{{server.server_name}}</dd>
-	<dt>Server Version</dt><dd>{{server.server_version}}</dd>
-	<dt>Host Name</dt><dd>{{server.host_name}}</dd>
-	<dt>User Name</dt><dd>{{server.user_name}}</dd>
-</dl>
-	</script>
-	<script id="sink-template" type="text/x-handlebars-template">
-{{#each sink}}
-<h4>{{description}}</h4>
-<p>Volume:{{#each volume}} {{this}}{{/each}}</p>
-<div id="sink-{{index}}-vol"></div>
-{{/each}}
-	</script>
-	<script id="source-template" type="text/x-handlebars-template">
-{{#each source}}
-<h4>{{description}}</h4>
-<p>Volume:{{#each volume}} {{this}}{{/each}}</p>
-{{/each}}
-	</script>
-	<script id="sink-input-template" type="text/x-handlebars-template">
-{{#each sink_input}}
-<h4>{{name}}</h4>
-{{#if has_volume}}
-<p>Volume:{{#each volume}} {{this}}{{/each}}</p>
-{{/if}}
-{{/each}}
-	</script>
-	<script id="source-output-template" type="text/x-handlebars-template">
-{{#each source_output}}
-<h4>{{name}}</h4>
-{{/each}}
-	</script>
-	<script id="sample-template" type="text/x-handlebars-template">
-{{#each sample}}
-<h4>{{description}}</h4>
-{{/each}}
-	</script>
-	<script id="module-template" type="text/x-handlebars-template">
-{{#each module}}
-<h4>{{name}}</h4>
-<p>{{description}}<br />{{author}}<br />{{version}}</p>
-{{/each}}
-	</script>
-	<script id="client-template" type="text/x-handlebars-template">
-{{#each client}}
-<h4>{{name}}</h4>
-{{/each}}
-	</script>
 </head>
 <body>
 	<script type="text/javascript" src="js/jquery-1.7.1.min.js"></script>
 	<script type="text/javascript" src="js/jquery-ui-1.8.17.custom.min.js"></script>
-	<script type="text/javascript" src="js/handlebars-1.0.0.beta.6.js"></script>
 	<script type="text/javascript" src="js/json2.js"></script>
 	<div id="tabs">
 		<ul>
@@ -84,86 +33,7 @@
 		<div id="clients"></div>
 		<div id="json"><pre id="raw"></pre></div>
 	</div>
-	<script type="text/javascript">
-$(function() {
-	var state = {},
-		output = {
-			server:        document.getElementById('server'),
-			sink:          document.getElementById('sinks'),
-			source:        document.getElementById('sources'),
-			sink_input:    document.getElementById('sink-inputs'),
-			source_output: document.getElementById('source-outputs'),
-			sample:        document.getElementById('samples'),
-			module:        document.getElementById('modules'),
-			client:        document.getElementById('clients')
-		},
-		template = {
-			server:        Handlebars.compile($("#server-template").html()),
-			sink:          Handlebars.compile($("#sink-template").html()),
-			source:        Handlebars.compile($("#source-template").html()),
-			sink_input:    Handlebars.compile($("#sink-input-template").html()),
-			source_output: Handlebars.compile($("#source-output-template").html()),
-			sample:        Handlebars.compile($("#sample-template").html()),
-			module:        Handlebars.compile($("#module-template").html()),
-			client:        Handlebars.compile($("#client-template").html())
-		},
-		render = {
-			sink: function() {
-				var sink = state.sink, s
-
-				for (var i in sink) {
-					s = sink[i]
-					$('#sink-' + s.index + '-vol').slider({
-						min: 0,
-						max: 65536,
-						value: s.volume[0],
-						change: function(event, ui) {
-							$.ajax({
-								url: '/sink/' + s.index + '/volume/' + ui.value,
-								method: 'GET'
-							});
-						}
-					});
-				}
-			}
-		},
-		raw = document.getElementById('raw'),
-		onDataReceived;
-
-	$("#tabs").tabs();
-
-	onDataReceived = function(ret) {
-		var p, t;
-
-		for (p in ret) {
-			state[p] = ret[p];
-			t = template[p];
-			if (t) {
-				output[p].innerHTML = t(state);
-			}
-			t = render[p];
-			if (t) {
-				t();
-			}
-		}
-		raw.innerHTML = JSON.stringify(state, null, '&nbsp;');
-		//$(".slider").each(function() { $(this).slider(); });
-		$.ajax({
-			url: '/poll/' + ret.stamp,
-			method: 'GET',
-			dataType: 'json',
-			success: onDataReceived
-		});
-	};
-
-	$.ajax({
-		url: '/poll/0',
-		method: 'GET',
-		dataType: 'json',
-		success: onDataReceived
-	});
-});
-	</script>
+	<script type="text/javascript" src="js/hacks.js"></script>
 </body>
 </html>
 
