web: add favicon

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
     <link href="/css/bootstrap.min.css" rel="stylesheet"/>
     <link href="/css/prettify.css" rel="stylesheet"/>
+    <link rel="shortcut icon" href="/img/pulseaudio-favicon.png" type="image/png"/>
+    <link rel="icon" href="/img/pulseaudio-favicon.png" type="image/png"/>
   </head>
   <body>
     <div class="navbar">
