--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
           <a class="brand" href="/">PulseAudio</a>
           <ul class="nav">
             <li class="active"><a data-toggle="tab" href="#server">Server</a></li>
-            <li><a data-toggle="tab" href="#sinks">Sinks</a></li>
-            <li><a data-toggle="tab" href="#sources">Sources</a></li>
+            <li><a data-toggle="tab" href="#sink-inputs">Playback</a></li>
+            <li><a data-toggle="tab" href="#source-outputs">Recording</a></li>
+            <li><a data-toggle="tab" href="#sinks">Output Devices</a></li>
+            <li><a data-toggle="tab" href="#sources">Input Devices</a></li>
             <li><a data-toggle="tab" href="#cards">Cards</a></li>
-            <li><a data-toggle="tab" href="#sink-inputs">Sink Inputs</a></li>
-            <li><a data-toggle="tab" href="#source-outputs">Source Outputs</a></li>
-            <li><a data-toggle="tab" href="#modules">Modules</a></li>
             <li><a data-toggle="tab" href="#clients">Clients</a></li>
+            <li><a data-toggle="tab" href="#modules">Modules</a></li>
             <li><a data-toggle="tab" href="#samples">Samples</a></li>
             <li><a data-toggle="tab" href="#json">JSON</a></li>
           </ul>
@@ -39,13 +39,13 @@
     <div class="container">
       <div class="tab-content">
         <div class="tab-pane active" id="server"></div>
+        <div class="tab-pane" id="sink-inputs"></div>
+        <div class="tab-pane" id="source-outputs"></div>
         <div class="tab-pane" id="sinks"></div>
         <div class="tab-pane" id="sources"></div>
         <div class="tab-pane" id="cards"></div>
-        <div class="tab-pane" id="sink-inputs"></div>
-        <div class="tab-pane" id="source-outputs"></div>
-        <div class="tab-pane" id="modules"></div>
         <div class="tab-pane" id="clients"></div>
+        <div class="tab-pane" id="modules"></div>
         <div class="tab-pane" id="samples"></div>
         <div class="tab-pane" id="json"><pre class="prettyprint lang-js" id="raw"></pre></div>
       </div>
